--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,1 +1,3 @@
 bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc1")
+
+single_version_override(module_name = "aspect_rules_lint", patches = ["//:aspect_rules_lint_gitattibute.patch"], patch_strip = 1,)
